--- a/html/suite1_test1_results.html
+++ b/html/suite1_test1_results.html
@@ -82,7 +82,7 @@
   <table class="resultsTable">
     <tr><th colspan="3" class="header passed">Passed Tests</th></tr>
           <tr>
-        <td colspan="3" class="group">com.ms.testcases.logintests</td>
+        <td colspan="3" class="group">com.ms.testcases.Logintests</td>
       </tr>
             
 <tr>
